Bug #249593 --> [WinNT] Firefox won't start because of missing Function "CopyStgMedium" in urlmon.dll (or urlmon.dll doesn't exist at all) on older versions of Windows.

Patch by Bernard Alleysson